test/corpus/patterns.txt
=====
match with nullary constructors
=====

function f(x) { match x { | Zero => return 0; | Succ(n) => return 1; } }

---

(source_file
  (function_decl
    name: (identifier)
    params: (param_list
      (param
        name: (identifier)))
    body: (body
      (match_stmt
        scrutinees: (identifier)
        arms: (match_arm
          patterns: (constructor_pattern
            name: (identifier))
          body: (return_stmt
            value: (integer_literal)))
        arms: (match_arm
          patterns: (constructor_pattern
            name: (identifier)
            args: (pattern_args
              (constructor_pattern
                name: (identifier))))
          body: (return_stmt
            value: (integer_literal)))))))

=====
match with wildcard and literal
=====

function f(x) { match x { | 0 => return 1; | _ => return 0; } }

---

(source_file
  (function_decl
    name: (identifier)
    params: (param_list
      (param
        name: (identifier)))
    body: (body
      (match_stmt
        scrutinees: (identifier)
        arms: (match_arm
          patterns: (literal_pattern
            (integer_literal))
          body: (return_stmt
            value: (integer_literal)))
        arms: (match_arm
          patterns: (wildcard_pattern)
          body: (return_stmt
            value: (integer_literal)))))))

=====
match with multiple scrutinees
=====

function f(x, y) { match x, y { | True, True => return 1; | _, _ => return 0; } }

---

(source_file
  (function_decl
    name: (identifier)
    params: (param_list
      (param
        name: (identifier))
      (param
        name: (identifier)))
    body: (body
      (match_stmt
        scrutinees: (identifier)
        scrutinees: (identifier)
        arms: (match_arm
          patterns: (constructor_pattern
            name: (identifier))
          patterns: (constructor_pattern
            name: (identifier))
          body: (return_stmt
            value: (integer_literal)))
        arms: (match_arm
          patterns: (wildcard_pattern)
          patterns: (wildcard_pattern)
          body: (return_stmt
            value: (integer_literal)))))))

=====
qualified constructor pattern (dot shorthand)
=====

function f(x) {
  match x {
    | B.F => return 1;
    | B.G(y) => return y;
  }
}

---

(source_file
  (function_decl
    name: (identifier)
    params: (param_list
      (param
        name: (identifier)))
    body: (body
      (match_stmt
        scrutinees: (identifier)
        arms: (match_arm
          patterns: (constructor_pattern
            name: (qualified_name
              (identifier)
              (identifier)))
          body: (return_stmt
            value: (integer_literal)))
        arms: (match_arm
          patterns: (constructor_pattern
            name: (qualified_name
              (identifier)
              (identifier))
            args: (pattern_args
              (constructor_pattern
                name: (identifier))))
          body: (return_stmt
            value: (identifier)))))))

=====
nested constructor pattern
=====

function f(x) { match x { | Succ(Succ(n)) => return n; } }

---

(source_file
  (function_decl
    name: (identifier)
    params: (param_list
      (param
        name: (identifier)))
    body: (body
      (match_stmt
        scrutinees: (identifier)
        arms: (match_arm
          patterns: (constructor_pattern
            name: (identifier)
            args: (pattern_args
              (constructor_pattern
                name: (identifier)
                args: (pattern_args
                  (constructor_pattern
                    name: (identifier))))))
          body: (return_stmt
            value: (identifier)))))))
